v2.48.2/guides/changelog.md
#### **XDN Packages** - [v2.48.2](https://github.com/moovweb/xdn/releases/tag/v2.48.2) (2021-03-24)
* [Snyk] Upgrade next from 10.0.6 to 10.0.7 (#756) @MEGrimshaw* [Snyk] Upgrade babel-loader from 8.1.0 to 8.2.2 (#760) @MEGrimshaw* XDN-10101 - Next plugins: Only return functions when passed functions. (#773) @markbrocato* XDN-10098 - Exclude @xdn/rum from xdn use command. (#772) @markbrocato---
#### **XDN Developer Console** - [v1.44.2](https://github.com/moovweb/le-deployer/releases/tag/v1.44.2) (2021-03-23)
* Added check for environment (#833) @KaarelKelk---
#### **XDN Developer Console** - [v1.44.1](https://github.com/moovweb/le-deployer/releases/tag/v1.44.1) (2021-03-23)
* Query navigation state is now saved in context (#831) @dijs* CWV tracking + small fixes (#821) @leotoll---
#### **XDN Developer Console** - [v1.43.2](https://github.com/moovweb/le-deployer/releases/tag/v1.43.2) (2021-03-19)
* Fix crash on Admin page (#820) @leotoll ---
#### **XDN Packages** - [v2.48.1](https://github.com/moovweb/xdn/releases/tag/v2.48.1) (2021-03-19)
* XDN-10012 - Fix error when running xdn dev before initial nuxt build (#770) @markbrocato---
#### **XDN Developer Console** - [v1.43.2](https://github.com/moovweb/le-deployer/releases/tag/v1.43.2) (2021-03-19)
* Fix crash on Admin page (#820) @leotoll ---
#### **XDN Developer Console** - [v1.43.1](https://github.com/moovweb/le-deployer/releases/tag/v1.43.1) (2021-03-19)
* Domain caa validation fix (#820) @leotoll ---
#### **XDN Packages** - [v2.48.0](https://github.com/moovweb/xdn/releases/tag/v2.48.0) (2021-03-19)
* XDN-9946 - Next.js: Allow withXDN and withServiceWorker to accept  fu… (#764) @markbrocato* Increased build-lambda-timeout (#751) @KaarelKelk* XDN-9941 - Next.js: Support optional catch-all parameters (#763) @markbrocato* Ignore routes with headers and cookie matching in the cache manifest (#765) @ierceg---
#### **XDN Packages** - [v2.47.2](https://github.com/moovweb/xdn/releases/tag/v2.47.2) (2021-03-19)
* *Really* fix req and resp cookie comparison not ignoring cookie attributes (#768) @ierceg* Fix req and resp cookie comparison not ignoring cookie attributes (#767) @ierceg---
#### **XDN Packages** - [v2.47.1](https://github.com/moovweb/xdn/releases/tag/v2.47.1) (2021-03-19)
* Fix director names outside of Virginia US shielding (#766) @ierceg* Enable back starter tests (#762) @ierceg---
#### **XDN Packages** - [v2.47.0](https://github.com/moovweb/xdn/releases/tag/v2.47.0) (2021-03-17)
* Fix gti prerendering (#754) @KaarelKelk* Add debug caching status (#757) @ierceg* Retry to get user edge config until build lambda times out (#742) @ierceg* Porting/cherry-picking/adapting code from v3 branch to v2 (#717) @ierceg* Bump elliptic from 6.5.3 to 6.5.4 in /integration-tests/edge (#748) @dependabot* [Snyk] Upgrade react-merge-refs from 1.0.0 to 1.1.0 (#735) @MEGrimshaw* [Snyk] Upgrade webpack from 5.18.0 to 5.21.2 (#738) @MEGrimshaw* [Snyk] Upgrade pino from 6.5.1 to 6.11.0 (#737) @MEGrimshaw* [Snyk] Upgrade uuid from 8.3.0 to 8.3.2 (#739) @MEGrimshaw* Moved internal backends to VCL (#716) @KaarelKelk---
#### **XDN Developer Console** - [v1.43.0](https://github.com/moovweb/le-deployer/releases/tag/v1.43.0) (2021-03-17)
* [MIGRATION] Time Preferences (#799) @dijs* Skip maintenance mode for dark mode (#813) @dijs* Clear error boundaries after navigation. (#812) @markbrocato* [MIGRATION] Dark Mode (#801) @dijs* Fix % rounding display and staff mode error when no CWV data (#807) @kevhender* Remove viewport (#810) @leotoll---
#### **XDN Developer Console** - [v1.42.4](https://github.com/moovweb/le-deployer/releases/tag/v1.42.4) (2021-03-15)
* fix team search (#811) @adrien-k---
#### **XDN Developer Console** - [v1.42.3](https://github.com/moovweb/le-deployer/releases/tag/v1.42.3) (2021-03-15)
* Fix acme challenge typo (#808) @leotoll* DNS validation fix (#809) @leotoll---
#### **XDN Developer Console** - [v1.42.2](https://github.com/moovweb/le-deployer/releases/tag/v1.42.2) (2021-03-15)
* Revert back: New UX for RUM filters - XDN-9451, XDN-9665, XDN-9450… (#806) @adrien-k---
#### **XDN Developer Console** - [v1.42.1](https://github.com/moovweb/le-deployer/releases/tag/v1.42.1) (2021-03-15)
* fix(Build) remove use of PageContext (#805) @adrien-k---
#### **XDN Developer Console** - [v1.41.2](https://github.com/moovweb/le-deployer/releases/tag/v1.41.2) (2021-03-10)
* Fixed ordering purge history. (#788) @KaarelKelk* Visual Improvements (#787) @dijs---
#### **XDN Packages** - [v2.46.11](https://github.com/moovweb/xdn/releases/tag/v2.46.11) (2021-03-09)
* fix(Devtools): edge hit flag ignoring re-entering x-xdn-t values (#745) @adrien-k* Changelog script updates for cleaner output and entry title (#746) @tristanlee85* XDN-9547 - Fix issue with matching excluded paths with serveStatic on… (#747) @markbrocato* Fix for updating cert with fewer domains (#740) @leotoll---
#### **XDN Developer Console** - [v1.41.0](https://github.com/moovweb/le-deployer/releases/tag/v1.41.0) (2021-03-09)
* RUM v1 (#655) @kevhender* Ssl get old domains view + rename site ui tweak (#755) @leotoll* increase metrics client timeout to 5mins (#747) @KaarelKelk---
#### **XDN Packages** - [v2.46.10](https://github.com/moovweb/xdn/releases/tag/v2.46.10) (2021-03-03)- Fixed a bug where the XDN CLI doesn't output the server URL on startu… (#743) @markbrocato- fix(UserLambdaLogStreamer): Moved end user lambda log stream to deplo… (#741) @MarkusTarn---#### **XDN Packages** - [v2.46.9](https://github.com/moovweb/xdn/releases/tag/v2.46.9) (2021-02-26)- XDN-8956 - [@xdn/starter] service-worker.js: “process” is not defined… (#734) @markbrocato- Adds typings for @xdn/devtools---#### **XDN Packages** - [v2.46.7](https://github.com/moovweb/xdn/releases/tag/v2.46.7) (2021-02-23)- fix(StremingUserLambdaLogs) Added try catch for ensureAppStarted to i… (#726) @MarkusTarn---#### **XDN Packages** - [v2.46.6](https://github.com/moovweb/xdn/releases/tag/v2.46.6) (2021-02-23)- XDN-8963 - @xdn/vue-storefront lambda fails to start (#731) @markbrocato- XDN-8955 - Fix xdn init for frontity (#730) @markbrocato---#### **XDN Packages** - [v2.46.4](https://github.com/moovweb/xdn/releases/tag/v2.46.4) (2021-02-18)- Validate Nuxt dependencies on build (#714) @tristanlee85---#### **XDN Packages** - [v2.46.3](https://github.com/moovweb/xdn/releases/tag/v2.46.3) (2021-02-17)- XDN-8410 - Suggest users go to the forums to get help when a deployme… (#729) @markbrocato---#### **XDN Packages** - [v2.46.2](https://github.com/moovweb/xdn/releases/tag/v2.46.2) (2021-02-17)- Add service worker and prefetch support to @xdn/frontity. (#727) @markbrocato- Fix regression that caused --site option to be ignored when deploying. (#728) @markbrocato---#### **XDN Packages** - [v2.46.1](https://github.com/moovweb/xdn/releases/tag/v2.46.1) (2021-02-16)- Improve support for Webpack 4 and 5 on Next.js (#722) @markbrocato---#### **XDN Packages** - [v2.46.0](https://github.com/moovweb/xdn/releases/tag/v2.46.0) (2021-02-16)- XDN-8788 - Provide a connector for frontity (#725) @markbrocato---#### **XDN Packages** - [v2.45.0](https://github.com/moovweb/xdn/releases/tag/v2.45.0) (2021-02-11)- XDN-8749 - TypeError: prompts is not a function (#719) @markbrocato- XDN-8205_Capture-console-output-of-user-lambda-during-deployment-and-prerendering-in-build-logs_Markus-Tarn (#713) @MarkusTarn---#### **XDN Packages** - [v2.44.2](https://github.com/moovweb/xdn/releases/tag/v2.44.2) (2021-02-09)- Add encoding as a dependency of @xdn/next so that create-next-app wor… (#715) @markbrocato---#### **XDN Packages** - [v2.44.0](https://github.com/moovweb/xdn/releases/tag/v2.44.0) (2021-02-08)- XDN-8466 - Add @xdn/starter connector (#702) @markbrocato---#### **XDN Packages** - [v2.44.0](https://github.com/moovweb/xdn/releases/tag/v2.44.0) (2021-02-08)- XDN-8466 - Add @xdn/starter connector (#702) @markbrocato---#### **XDN Packages** - [v2.43.0](https://github.com/moovweb/xdn/releases/tag/v2.43.0) (2021-02-05)- XDN-8650 - Add --disable-permanent-assets deploy option (#710) @markbrocato- Prerender top (#620) @KaarelKelk---#### **XDN Packages** - [v2.42.1](https://github.com/moovweb/xdn/releases/tag/v2.42.1) (2021-02-04)- Make NextRoutes.render404 public. (#709) @markbrocato- Add Webpack 5 support to Next.js apps. (#708) @markbrocato---#### **XDN Packages** - [v2.42.0](https://github.com/moovweb/xdn/releases/tag/v2.42.0) (2021-02-03)- tests(ConsoleRedirect/ForwardQS): enable integration test (#687) @adrien-k- feat: CLI/xdn env pull (#700) @adrien-k- Add xdn_eid cookie and related RUM server timings (#704) @ierceg- fix(BrokenSnapshot): Added missing json.escape() (#705) @MarkusTarn- XDN-6660_Do-not-log-to-s3-access-logs-on-free-tier_Markus-Tarn (#688) @MarkusTarn- XDN-8464_Build-fails-schema-validation-when-setting-sources-in-xdnconfigjs_Markus-Tarn (#703) @MarkusTarn---#### **XDN Packages** - [v2.41.1](https://github.com/moovweb/xdn/releases/tag/v2.41.1) (2021-01-29)- Next.js rewrites: Don't add additional route to rewrite json data URLs. (#698) @markbrocato- Don't flush on XDN version upgrade (#699) @ierceg---#### **XDN Packages** - [v2.41.0](https://github.com/moovweb/xdn/releases/tag/v2.41.0) (2021-01-25)- XDN-8397 - Add support for Next.js running in an nx monorepo (#695) @markbrocato- fix(devtools/style): isolate style a bit more (#692) @adrien-k---#### **XDN Packages** - [v2.40.2](https://github.com/moovweb/xdn/releases/tag/untagged-cd7d16304b488fbdc279) (2021-01-21)- Fix bug in url logging where field was not escaped (#694) @phdunham- Don't populate geo/UA headers when behind edge (#693) @ierceg---#### **XDN Packages** - [v2.40.1](https://github.com/moovweb/xdn/releases/tag/v2.40.1) (2021-01-18)- Add image optimizer (#686) @markbrocato- Copy over includeFiles and nodeModules before loading the router at b… (#689) @markbrocato- Preserve colors in output when running "xdn dev" (#690) @markbrocato---#### **XDN Packages** - [v2.40.0](https://github.com/moovweb/xdn/releases/tag/v2.40.0) (2021-01-13)- feat(ConsoleRedirect): trim qs option + match with sorted qs (#682) @adrien-k---#### **XDN Packages** - [v2.39.3](https://github.com/moovweb/xdn/releases/tag/v2.39.3) (2021-01-11)- bump version (#685) @KaarelKelk- fix(Axios) Fix failing deploymnts due to maxBodyLength (#684) @KaarelKelk---#### **XDN Packages** - [v2.39.2](https://github.com/moovweb/xdn/releases/tag/v2.39.2) (2021-01-11)- XDN-8150 - Wrong route being run when proxy is used with path and tra… (#683) @markbrocato---#### **XDN Packages** - [v2.39.1](https://github.com/moovweb/xdn/releases/tag/v2.39.1) (2021-01-11)- fix(Build): double logs on build fail + external messages (#681) @adrien-k---#### **XDN Packages** - [v2.39.0](https://github.com/moovweb/xdn/releases/tag/v2.39.0) (2021-01-08)- Add support for nuxt generate and static pages which fall back to SSR. (#671) @markbrocato---#### **XDN Packages** - [v2.38.1](https://github.com/moovweb/xdn/releases/tag/v2.38.1) (2021-01-08)- Fixing VSF (#676) @dijs---#### **XDN Packages** - [v2.38.0](https://github.com/moovweb/xdn/releases/tag/v2.38.0) (2021-01-08)- XDN-8116_XDN-cli-process-should-reflect-same-exit-code-as-its-child-process_Markus-Tarn (#680) @MarkusTarn- Adds a --connector option to xdn init. (#679) @markbrocato- Don't allow built-in envvars to be overriden through dev console (#677) @ierceg---#### **XDN Packages** - [v2.37.2](https://github.com/moovweb/xdn/releases/tag/v2.37.2) (2021-01-07)- [XDN-7802] Republish connectors to public repo (#665) @tristanlee85- Fix local permanent asset support in dev and prod modes. (#678) @markbrocato---#### **XDN Packages** - [v2.37.1](https://github.com/moovweb/xdn/releases/tag/v2.37.1) (2021-01-06)- Increase default header size to 64kb (#669) @ierceg- Xdn 7974 fix include files (#670) @markbrocato- Fix regression in 2.34 where renderNextPage with rewritten path fails to render in dev mode. (#667) @markbrocato---#### **XDN Packages** - [v2.37.0](https://github.com/moovweb/xdn/releases/tag/v2.37.0) (2021-01-06)- Bump axios from 0.19.0 to 0.21.1 in /packages/cli (#675) @dependabot- Bump axios from 0.19.2 to 0.21.1 in /packages/build-lambda (#674) @dependabot- feat: Preserve Cache + permanent assets (#645) @adrien-k- Don't cache fallback route for Angular/Spartacus (#672) @kevhender- fix x-xdn-destination destinationName escape in edge_recv_evaluate_de… (#673) @KaarelKelk- fix(Prerender) fix types (#668) @KaarelKelk- User lambda errors during deployment are not reported to CLI (#648) @MarkusTarn---#### **XDN Packages** - [v2.36.1](https://github.com/moovweb/xdn/releases/tag/v2.36.1) (2020-12-30)- Fix redirects with queries (#666) @ierceg---#### **XDN Packages** - [v2.36.0](https://github.com/moovweb/xdn/releases/tag/v2.36.0) (2020-12-30)- core API docs update (#663) @ianand- Use xdn dev (#660) @markbrocato---#### **XDN Packages** - [v2.35.2](https://github.com/moovweb/xdn/releases/tag/v2.35.2) (2020-12-24)- Xdn 7579 xdn init doesnt create dependency files mark brocato (#656) @markbrocato---#### **XDN Packages** - [v2.35.1](https://github.com/moovweb/xdn/releases/tag/v2.35.1) (2020-12-23)- Fix caching manifest generation issue (#661) @ierceg- fix(proxy/edge): path with no / + fix(proxy/cloud) query-string forwarding (#662) @adrien-k- fix(Prerendering) fix retry (#655) @KaarelKelk- Bump ini from 1.3.5 to 1.3.8 in /packages/build-lambda (#659) @dependabot---#### **XDN Packages** - [v2.35.0](https://github.com/moovweb/xdn/releases/tag/v2.35.0) (2020-12-22)- XDN-7844 - Issues with Next Commerce support (#658) @markbrocato- XDN-7849 - serveStatic does not support nested paths (#657) @markbrocato- Introduce a formal XDN connectors API (#637) @markbrocato---#### **XDN Packages** - [v2.34.2](https://github.com/moovweb/xdn/releases/tag/v2.34.2) (2020-12-22)- Add checks before using endsWith (#651) @ierceg---#### **XDN Packages** - [v2.34.1](https://github.com/moovweb/xdn/releases/tag/v2.34.1) (2020-12-21)- Fastly cert update + multiple domain activation fix (#653) @leotoll---#### **XDN Packages** - [v2.34.0](https://github.com/moovweb/xdn/releases/tag/v2.34.0) (2020-12-21)- Improved error message if project fails due to missing @xdn/next build plugins (#652) @ianand- XDN-7810 - Add support for fallback: 'blocking' in getStaticPaths() (#654) @markbrocato---#### **XDN Packages** - [v2.33.4](https://github.com/moovweb/xdn/releases/tag/v2.33.4) (2020-12-18)- Remove content-length setting on unzipping (#601) @ierceg---#### **XDN Packages** - [v2.33.3](https://github.com/moovweb/xdn/releases/tag/v2.33.3) (2020-12-17)- Added missing appShell (#649) @ierceg---#### **XDN Packages** - [v2.33.2](https://github.com/moovweb/xdn/releases/tag/v2.33.2) (2020-12-17)- fix(Redirect): bug in initialise build (#647) @adrien-k- test(ConsoleRedirect): enable integration test (#646) @adrien-k- Do not reenable clustering and shielding on ISG+deployment restarts (#643) @ierceg---#### **XDN Packages** - [v2.33.1](https://github.com/moovweb/xdn/releases/tag/v2.33.1) (2020-12-16)- XDN-7693 - Next: SSG static data paths are not correctly prerendered (#644) @markbrocato- fix(core/redirect): query params (fixes the devtools docs redirect) (#608) @adrien-k---#### **XDN Packages** - [v2.33.0](https://github.com/moovweb/xdn/releases/tag/v2.33.0) (2020-12-16)- Localized rewrites not working in next commerce app (#641) @markbrocato- feat(redirects): implement global redirects (#627) @adrien-k---#### **XDN Packages** - [v2.32.2](https://github.com/moovweb/xdn/releases/tag/v2.32.2) (2020-12-15)- Don't set long TTL on revalidated assets (#640) @ierceg- XDN-7650 - Route for /**xdn**/cache-manifest.js fails if route is de… (#639) @markbrocato- XDN-7592 - Build fails when serveStatic points to a non-existing asset. (#633) @markbrocato---#### **XDN Packages** - [v2.32.1](https://github.com/moovweb/xdn/releases/tag/v2.32.1) (2020-12-11)- Log AWS subaccount ID to our Sumo access logs (#638) @ierceg- Prohibit the manipulation of content-length header directly from the router (#635) @ierceg- feat(Prerender) dump body on 534 (#636) @KaarelKelk---#### **XDN Packages** - [v2.32.0](https://github.com/moovweb/xdn/releases/tag/v2.32.0) (2020-12-11)- Adds renderWithApp ResponseWriter method. (#634) @markbrocato- Fix decoding of params for prefetch when values already have a % sign (#630) @kevhender---#### **XDN Packages** - [v2.31.0](https://github.com/moovweb/xdn/releases/tag/v2.31.0) (2020-12-10)- Fix integration tests (#631) @ierceg- Enable ISG (#600) @ierceg- fix(Actions) test new workflow env variable (#629) @KaarelKelk---#### **XDN Packages** - [v2.30.1](https://github.com/moovweb/xdn/releases/tag/v2.30.1) (2020-11-16)- Fix another cache poisoning (#611) @ierceg---#### **XDN Packages** - [v2.30.0](https://github.com/moovweb/xdn/releases/tag/v2.30.0) (2020-11-16)- @xdn/apollo now supports converting queries to GETs by operation and compressing them. (#560) @markbrocato- The @xdn/next plugin now supports webpack 5. (#603) @markbrocato- xdn init now supports TypeScript (#607) @markbrocato- XDN-6813 - Webpack fails on importing of @xdn/core (#605) @markbrocato---#### **XDN Packages** - [v2.29.0](https://github.com/moovweb/xdn/releases/tag/v2.29.0) (2020-11-10)- [XDN-6213] Spartacus integration improvement - first steps (#598) @kevhender---#### **XDN Packages** - [v2.28.0](https://github.com/moovweb/xdn/releases/tag/v2.28.0) (2020-11-06)- XDN-6756 - Support distDir in next.config.js (#599) @markbrocato---#### **XDN Packages** - [v2.27.4](https://github.com/moovweb/xdn/releases/tag/v2.27.4) (2020-11-04)- Fix Module decode-uri-component not found (#595) @markbrocato---#### **XDN Packages** - [v2.27.3](https://github.com/moovweb/xdn/releases/tag/v2.27.3) (2020-11-04)- Always log user agent in user facing logs (#594) @ierceg- Add **dev**getCompleteEdgeConfig job (#593) @ierceg- Fix using custom servers in development. (#589) @markbrocato---#### **XDN Packages** - [v2.27.2](https://github.com/moovweb/xdn/releases/tag/v2.27.2) (2020-11-04)- XDN-6589 Fix browser.maxAge: 0 interfering with edge caching (#590) @ierceg---#### **XDN Packages** - [v2.27.1](https://github.com/moovweb/xdn/releases/tag/v2.27.1) (2020-11-04)- Bump version to 2.27.1 (#591) @KaarelKelk- XDN-6513_Edge-config-validation-errors-are-not-properly-shown-to-the-user_Markus-Tarn (#587) @MarkusTarn- feat(Prerendering) log response (#582) @KaarelKelk- Fix `browser.maxAge: 0` interfering with edge caching (#588) @ierceg---#### **XDN Packages** - [v2.27.0](https://github.com/moovweb/xdn/releases/tag/v2.27.0) (2020-11-03)- Allow users to run downloaded deployments. (#576) @markbrocato- fix(Devtools): preserve original req (#586) @adrien-k- chore(build-lambda): remove secrets from logs + remove altHostnames +… (#584) @adrien-k- XDN-6217_Raise-an-error-durring-deployment-if-any-of-the-backends-use-one-of-the-sites-domains-as-domainOrIp_Markus-Tarn (#573) @MarkusTarn- XDN-6397 - Add source maps to router bundle to making debugging easie… (#580) @markbrocato---#### **XDN Packages** - [v2.26.3](https://github.com/moovweb/xdn/releases/tag/v2.26.3) (2020-10-28)- Log x-xdn-hit-request-id (#583) @ierceg---#### **XDN Packages** - [v2.26.2](https://github.com/moovweb/xdn/releases/tag/v2.26.2) (2020-10-28)- Fix watching of links for prefetching (#585) @kevhender---#### **XDN Packages** - [v2.26.1](https://github.com/moovweb/xdn/releases/tag/v2.26.1) (2020-10-27)- fix(Prefetcher): check origin (#581) @adrien-k---#### **XDN Packages** - [v2.26.0](https://github.com/moovweb/xdn/releases/tag/v2.26.0) (2020-10-26)- Add more logging on edge signature check (#571) @ierceg- feat(FastlyClient): retry on clone 409 (#579) @adrien-k- chore(lint): cover and fix ts files (#561) @adrien-k- XDN-5841_Allow-string-for-headercookiequery-matching-not-just-Regex_Markus-Tarn (#558) @MarkusTarn---#### **XDN Packages** - [v2.25.0](https://github.com/moovweb/xdn/releases/tag/v2.25.0) (2020-10-23)- Emulate edge locally by adding parameter interpolation in response.setHeader (#467) @phdunham- Update @xdn/prefetcher to check query parameters (CU-XDN-514) (CU-XDN-5937) (#539) @kevhender---#### **XDN Packages** - [v2.24.2](https://github.com/moovweb/xdn/releases/tag/v2.24.2) (2020-10-23)- Fix logo (#574) @ierceg- fix(Devtools): isolate Devtools style + fix reload + add clear btns (#570) @adrien-k- Raise 500 when router path matching is bad including partial splats (#556) @ierceg---#### **XDN Packages** - [v2.24.1](https://github.com/moovweb/xdn/releases/tag/v2.24.1) (2020-10-21)- Preloading logs (#566) @KaarelKelk---#### **XDN Packages** - [v2.24.0](https://github.com/moovweb/xdn/releases/tag/v2.24.0) (2020-10-21)- fix(withXDN): try fixing integration tests (#569) @adrien-k- fix(Preloading) when no requests are sent back to le-deployer (#563) @KaarelKelk- Fix XDN reentry when clients forward all the headers including Fastly-FF (#567) @ierceg- feat(Devtools): Allow enabling/disabling the devtools (#554) @adrien-k- Adds xdn.config.js to the src directory in the uploaded bundle. (#568) @markbrocato- Fix the bad header name in Spartacus package (#565) @ierceg---#### **XDN Packages** - [v2.23.1](https://github.com/moovweb/xdn/releases/tag/v2.23.1) (2020-10-19)- fix(Build-lambda): override stable-2 (#564) @adrien-k---#### **XDN Packages** - [v2.22.0](https://github.com/moovweb/xdn/releases/tag/v2.22.0) (2020-10-19)- Bump version to 2.22.0 (#562) @KaarelKelk- feat(Preloading) Adds a static prerendering option to Router (#458) @markbrocato- XDN-5390_Validate-domain-names_Markus-Tarn (#553) @MarkusTarn- Update readme to reflect spartacus integration tests required maintenance work (#538) @leotoll- Fix next peerDependency in @xdn and automatically add @xdn/svelte whe… (#535) @markbrocato- chore(prettier): harmonize prettier and format more file types (#547) @adrien-k- fix(Fastly): expose invalid backend domain error (#550) @adrien-k- Remove xdn_pref_headers param (#518) @kevhender- feat(Devtools/Visualizer) (#509) @adrien-k---#### **XDN Packages** - [v2.21.0](https://github.com/moovweb/xdn/releases/tag/v2.21.0) (2020-10-14)- Add req.protocol (#551) @ierceg---#### **XDN Packages** - [v2.20.3](https://github.com/moovweb/xdn/releases/tag/v2.20.3) (2020-10-13)- Do not leak auth header upstream (#549) @ierceg- fix(CallbackApi): fix awaitFlushed, add timeout and retry + unit tests (#543) @adrien-k---#### **XDN Packages** - [v2.20.2](https://github.com/moovweb/xdn/releases/tag/v2.20.2) (2020-10-07)- Fix trailing query string in lambda (#546) @ierceg- Make `createGroups` param of `addCookie` optional (#540) @kevhender---#### **XDN Packages** - [v2.20.1](https://github.com/moovweb/xdn/releases/tag/v2.20.1) (2020-10-06)- fix(CallbackLogger) fixed message flush race condition (#542) @KaarelKelk- Fix initialization build problem (#544) @ierceg---#### **XDN Packages** - [v2.20.0](https://github.com/moovweb/xdn/releases/tag/v2.20.0) (2020-10-06)- Allow opt-in support for HTTP protocol (#533) @ierceg---#### **XDN Packages** - [v2.19.0](https://github.com/moovweb/xdn/releases/tag/v2.19.0) (2020-10-05)- XDN-5643 - Environment variables from the XDN Developer Console are now accessible at build time when using a deploy token (#526) @markbrocato---#### **XDN Packages** - [v2.18.1](https://github.com/moovweb/xdn/releases/tag/v2.18.1) (2020-10-05)- Fix error with babel-loader not being found in Next.js apps starting … (#536) @markbrocato---#### **XDN Packages** - [v2.18.0](https://github.com/moovweb/xdn/releases/tag/v2.18.0) (2020-10-02)- Add --includeSources CLI option. (#523) @markbrocato- XDN-5761 - Add @xdn/react when running xdn init in gatsby app (#534) @markbrocato- XDN-5749 - Improve XDN install time by removing serverless (#531) @markbrocato- XDN-5753 - Fix issue with websocket requests failing during local dev… (#532) @markbrocato---#### **XDN Packages** - [v2.17.0](https://github.com/moovweb/xdn/releases/tag/v2.17.0) (2020-10-01)- XDN-5686 - Minimize Nuxt.js serverless bundle size (#528) @markbrocato- Minimize router bundle size (#529) @markbrocato- Send custom message for Fastly 500 errors (#524) @ierceg---#### **XDN Packages** - [v2.16.1](https://github.com/moovweb/xdn/releases/tag/v2.16.1) (2020-09-30)- Enable build lambda deploys to sandbox (#527) @ierceg- Nuxt: static routes should take precedence over dynamic routes. (#525) @markbrocato- Use random fastly API tokens provided by LD, if available (#508) @ierceg- Fix console output to JSON doesn't capture all args (#521) @ierceg- XDN-5466 - Embed the router in the uploaded build (#514) @markbrocato---#### **XDN Packages** - [v2.16.0](https://github.com/moovweb/xdn/releases/tag/v2.16.0) (2020-09-28)- XDN-3005 - Support for basic auth (#519) @markbrocato- XDN-5587 - Fix issue where catch-all routes incorrectly take preceden… (#520) @markbrocato- Improve error message that is shown when deployment fails due to an error in the user's application code. (#517) @markbrocato- Improve user errors on edge deploy (#502) @MarkusTarn- Add integration tests for force-private-caching override (#513) @ierceg---#### **XDN Packages** - [v2.15.0](https://github.com/moovweb/xdn/releases/tag/v2.15.0) (2020-09-25)- Added paths config support (#515) @dijs- Allow backends to have custom ports at and above 443 (#516) @ierceg---#### **XDN Packages** - [v2.14.0](https://github.com/moovweb/xdn/releases/tag/v2.14.0) (2020-09-24)- Allow for not-present matching for headers, cookies and query parameters (#511) @ierceg- Fix header name comparison to be case-insensitive (#511) @ierceg---#### **XDN Packages** - [v2.13.4](https://github.com/moovweb/xdn/releases/tag/v2.13.4) (2020-09-24)- Reset private caching to false only if explicitly requested in the router (#512) @ierceg---#### **XDN Packages** - [v2.13.3](https://github.com/moovweb/xdn/releases/tag/v2.13.3) (2020-09-24)- XDN-5528 - Support hardcoded paths in Next.js rewrites (#510) @markbrocato---#### **XDN Packages** - [v2.13.2](https://github.com/moovweb/xdn/releases/tag/v2.13.2) (2020-09-23)- Improve CLI output: Add a clearer deployment complete message. (#505) @markbrocato---#### **XDN Packages** - [v2.13.1](https://github.com/moovweb/xdn/releases/tag/v2.13.1) (2020-09-23)- Don't add default router and service worker to the user's app on ever… (#507) @markbrocato---#### **XDN Packages** - [v2.13.0](https://github.com/moovweb/xdn/releases/tag/v2.13.0) (2020-09-22)- [XDN-5422] Ensure that manual edits to the changelog are preserved (#506) @tristanlee85- XDN-5414 - Use --standalone to bundle dependencies when running nuxt … (#501) @markbrocato---#### **XDN Packages** - [v2.12.1](https://github.com/moovweb/xdn/releases/tag/v2.12.1) (2020-09-22)- Update Sapper integration test to match the docs and not include node… (#504) @markbrocato- Remove obsolete domain check to enable wildcard reverse proxy in edge (#503) @ierceg- Allow relative paths when deep fetching from JSON (#498) @kevhender---#### **XDN Packages** - [v2.12.0](https://github.com/moovweb/xdn/releases/tag/v2.12.0) (2020-09-21)- Apollo prefetching now uses GETs for all queries. (#500) @markbrocato---#### **XDN Packages** - [v2.11.2](https://github.com/moovweb/xdn/releases/tag/v2.11.2) (2020-09-21)- Fix XDN-5364 - Next.js redirect to remove trailing slash prevents fal… (#496) @markbrocato- feat(CLI): Require node version: 12 or newer (#495) @adrien-k- [XDN-5258] Generate changelog when publishing release (#497) @tristanlee85- docs(README): add link to docs (#499) @adrien-k---#### **XDN Packages** - [v2.11.1](https://github.com/moovweb/xdn/releases/tag/v2.11.1) (2020-09-16)- Update integration tests for POST/GET&xdn_prefetch=1 caching (#494) @phdunham- Next.js: Fix xdn build on windows (#492) @markbrocato- Fix coverage of nextRoutes (#493) @leotoll---#### **XDN Packages** - [v2.11.0](https://github.com/moovweb/xdn/releases/tag/v2.11.0) (2020-09-16)- feat(frameworks): add Gatsby support + serve static root document (#474) @adrien-k---#### **XDN Packages** - [v2.10.3](https://github.com/moovweb/xdn/releases/tag/v2.10.3) (2020-09-15)- Sapper: Remove extra service-worker route from the default routes.js file add… (#491) @markbrocato---#### **XDN Packages** - [v2.10.2](https://github.com/moovweb/xdn/releases/tag/v2.10.2) (2020-09-15)- Next.js: pages/404.js now properly functions as the default fallback (#478) @leotoll- Fix bug in @xdn/sapper where the service worker would not be loaded i… (#490) @markbrocato---#### **XDN Packages** - [v2.10.1](https://github.com/moovweb/xdn/releases/tag/v2.10.1) (2020-09-14)- Fix issue where pages/api/index.js was not being resolved by the XDN … (#488) @markbrocato---#### **XDN Packages** - [v2.10.0](https://github.com/moovweb/xdn/releases/tag/v2.10.0) (2020-09-14)- feat(Errors): enhance user-facing fastly errors (#480) @adrien-k- Fix bug when using proxy with path option and a catch-all or optional… (#482) @markbrocato- Run request/response header manipulation in compute/trasnform (#483) @ierceg- Add functionality for prefetching GQL requests. (CU-a6axpw) (#451) @markbrocato- Add x-xdn-user-t to server-timing response header (#484) @ierceg- Bump node-fetch from 2.6.0 to 2.6.1 in /integration-tests/edge (#487) @dependabot- Bump node-fetch from 2.6.0 to 2.6.1 in /packages/core (#486) @dependabot- Add support for running Sapper apps with xdn run --production (#481) @markbrocato- Log 503 errors generated by shield (not just edge) (#479) @phdunham---#### **XDN Packages** - [v2.9.0](https://github.com/moovweb/xdn/releases/tag/v2.9.0) (2020-09-09)- Fix XDN-on-XDN caching issues (#431) @ierceg- fix(MatchQuery) added edge config tests (#477) @KaarelKelk---#### **XDN Packages** - [v2.8.0](https://github.com/moovweb/xdn/releases/tag/v2.8.0) (2020-09-08)- Adds support for the Sapper framework (#462) @markbrocato- feat(CLI): log failed build output in LD (#452) @adrien-k- Bump yargs-parser from 15.0.0 to 15.0.1 in /packages/cli (#475) @dependabot---#### **XDN Packages** - [v2.7.0](https://github.com/moovweb/xdn/releases/tag/v2.7.0) (2020-09-07)- feat(MatchQuery) added criteria.query to match query params - XDN-533 (#461) @KaarelKelk- Optimize router loop unrolling by using equivalency chains (#472) @ierceg- fix(handler/logs): wrap console AND streams + remove globals (#471) @adrien-k- fix(Route) Matching headers returned true for single header match (#469) @KaarelKelk---#### **XDN Packages** - [v2.6.4](https://github.com/moovweb/xdn/releases/tag/v2.6.4) (2020-09-04)- Lower the ACL limit to 900 to avoid Fastly's spurious API errors (#473) @ierceg---#### **XDN Packages** - [v2.6.3](https://github.com/moovweb/xdn/releases/tag/v2.6.3) (2020-09-03)- Move static method to RouteGroup (#465) @markbrocato---#### **XDN Packages** - [v2.6.2](https://github.com/moovweb/xdn/releases/tag/v2.6.2) (2020-09-02)- Fix bug where xdn init fails if a supported web framework is not dete… (#470) @markbrocato- Ignore query params when watching links to prefetch (#444) @kevhender---#### **XDN Packages** - [v2.6.1](https://github.com/moovweb/xdn/releases/tag/v2.6.1) (2020-09-02)- Optimize x-xdn-original-qs to be injected only when qs are changed (#468) @ierceg---#### **XDN Packages** - [v2.6.0](https://github.com/moovweb/xdn/releases/tag/v2.6.0) (2020-09-01)- Fix caching of static pages in NextRoutes. (#464) @markbrocato- Fix memory overconsumption in moov_hash (#463) @ierceg- Router static implementation for next (#428) @leotoll- Improve ci time (#447) @leotoll- Inject example x-xdn-geo- headers when running locally for easier testing. (#460) @phdunham- Emulate edge by injecting headers based on user-agent (#457) @phdunham---#### **XDN Packages** - [v2.5.0](https://github.com/moovweb/xdn/releases/tag/v2.5.0) (2020-08-28)- feat(core/Router): prevent adding routes after fallback statement (#453) @adrien-k- fix(consoleWrapper): shim stdout/stderr to encapsulate in json (#432) @adrien-k- XDN-1438 - Fix bug where using an async callback in compute() results… (#456) @markbrocato- fix(@xdn/angular) Fix link command (#436) @KaarelKelk- Update the color scheme of the logo in the CLI. (#455) @markbrocato- Emulate edge's x-xdn-client-ip header when running locally (#454) @phdunham---#### **XDN Packages** - [v2.4.2](https://github.com/moovweb/xdn/releases/tag/v2.4.2) (2020-08-26)- Corrected API documentation comment (#450) @ianand- Order predefined routes before dynamic routes (#440) @dijs- Angular fixups (#446) @tonylepmets---#### **XDN Packages** - [v2.4.1](https://github.com/moovweb/xdn/releases/tag/v2.4.1) (2020-08-26)- PC-2330 - add Fastly API retry on 500 or 503 errors (#441) @phdunham- Disable request coalesing on shield (#448) @ierceg---#### **XDN Packages** - [v1.48.1](https://github.com/moovweb/xdn/releases/tag/v1.48.1) (2020-08-26)- [v1 back port] Disable request coalescing on shield (#449) @ierceg---#### **XDN Packages** - [v2.4.0](https://github.com/moovweb/xdn/releases/tag/v2.4.0) (2020-08-26)- Fix bug where context.params was undefined in getServerSideProps and getInitialProps in development when using xdn run. (#443) @dijs- Adds a `compute()` function to `ResponseWriter` to compute responses in t… (#442) @markbrocato- Support service workers and prefetching in Nuxt apps when running in … (#445) @markbrocato---#### **XDN Packages** - [v1.48.0](https://github.com/moovweb/xdn/releases/tag/v1.48.0) (2020-08-24)- v1: Add ability to completely turn off edge/browser caching for a route (back port of #435 to v1) (#437) @ierceg- Don't use latest tag any more (#434) @ierceg---#### **XDN Packages** - [v2.3.1](https://github.com/moovweb/xdn/releases/tag/v2.3.1) (2020-08-23)- No changes - releasing as the previous release went out incorrectly as 2.2.1---#### **XDN Packages** - [v2.3.0](https://github.com/moovweb/xdn/releases/tag/v2.3.0) (2020-08-22)- Add ability to completely turn off edge/browser caching for a route (#435) @ierceg---#### **XDN Packages** - [v1.47.0](https://github.com/moovweb/xdn/releases/tag/v1.47.0) (2020-08-21)- [1.x] Adds a new timing API to allow users to track the performance of thei… (#430) (#433) @ierceg---#### **XDN Packages** - [v2.2.0](https://github.com/moovweb/xdn/releases/tag/v2.2.0) (2020-08-20)- Adds a new timing API to allow users to track the performance of thei… (#430) @markbrocato- Upgrade next tests to 9.5 (#429) @ierceg- Fix issue during xdn build with Next.js apps that use source maps. (#423) @markbrocato- Add service worker to new Nuxt.js apps. (#427) @markbrocato- Fix bug when Next.js rewrites and redirects functions are async. (#425) @markbrocato---#### **XDN Packages** - [v2.1.0](https://github.com/moovweb/xdn/releases/tag/v2.1.0) (2020-08-18)- Install @xdn/vue as a runtime dependency. (#421) @markbrocato- Make cors config optional for prefetch options (#424) @kevhender- Fix VCL code generation with conditions containing double quotes (#426) @ierceg- Add spartacus tests (#415) @leotoll- Make cors config optional for prefetch options (#420) @kevhender- Update "current" folder with latest when pushing new docs (#422) @kevhender---#### **XDN Packages** - [v2.0.4](https://github.com/moovweb/xdn/releases/tag/v2.0.4) (2020-08-17)- Add NODE_ENV production to build lambdas (#419) @ierceg- Add appShell method to ResponseWriter. (#413) @markbrocato- PC-2313 - Fix nuxt es6 prod (#418) @markbrocato---#### **XDN Packages** - [v2.0.3](https://github.com/moovweb/xdn/releases/tag/v2.0.3) (2020-08-15)- Support src/pages in Next.js apps. (#417) @markbrocato